--- a/Proyecto1/requirements.txt
+++ b/Proyecto1/requirements.txt
@@ -11,6 +11,7 @@ fonttools==4.43.1
 ipykernel==6.25.2
 ipython==8.16.1
 jedi==0.19.1
+joblib==1.3.2
 jupyter_client==8.4.0
 jupyter_core==5.4.0
 kaleido==0.2.1
@@ -36,11 +37,15 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 pywin32==306
 pyzmq==25.1.1
+scikit-learn==1.3.2
 scipy==1.11.3
+seaborn==0.13.0
 six==1.16.0
 stack-data==0.6.3
 tenacity==8.2.3
+threadpoolctl==3.2.0
 tornado==6.3.3
 traitlets==5.11.2
 tzdata==2023.3
 wcwidth==0.2.8
+yellowbrick==1.5
